[package]
name = "gm82live"
version = "0.1.0"
authors = ["renex"]
edition = "2018"
publish = false

[dependencies]
winapi = { version = "0.3.8", features = ["consoleapi", "minwindef"] }
notify = "4.0.0"
once_cell = "1.20.2"
parking_lot = "0.12.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
